# Clipture

./: .gitignore  LICENSE  README.md  fix.js  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md
engine/: CMakeLists.txt
engine/include/clipture/: AacEncoderSession.hpp  AudioCaptureWorker.hpp  AudioPacketRouting.hpp  AudioReplayCoordinator.hpp  BoundedWrite.hpp  CaptureSession.hpp  Diagnostics.hpp  EncoderWorker.hpp  Engine.hpp  FrameQueue.hpp  H264PacketAnalyzer.hpp  Mp4Muxer.hpp  NativeRuntime.hpp  PacketRingBuffer.hpp  ProcessSnapshot.hpp  Tonemapper.hpp
engine/src/: AacEncoderSession.cpp  AudioCaptureWorker.cpp  AudioReplayCoordinator.cpp  CaptureSession.cpp  Diagnostics.cpp  EncoderWorker.cpp  Engine.cpp  FrameQueue.cpp  H264PacketAnalyzer.cpp  Mp4Muxer.cpp  NativeRuntime.cpp  Tonemapper.cpp  main.cpp
engine/tests/: PacketArchitectureTests.cpp
src/main/: main.ts
src/preload/: preload.ts
src/renderer/: App.tsx  NotificationOverlay.tsx  index.html  main.tsx  styles.css
src/shared/: types.ts
